<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#bfffe1"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/currentPrimos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/primos_in_possession"
        android:inputType="numberDecimal"
        android:padding="20dp"
        android:layout_marginTop="30dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="" />

    <RadioGroup
        android:id="@+id/radioGroupOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkedButton="@id/primoRadioButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currentPrimos">

        <RadioButton
            android:id="@+id/primoRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/primogems"
            android:onClick="onRadioGroupOneClick"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/currentPrimos" />

        <RadioButton
            android:id="@+id/fateRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fates"
            android:onClick="onRadioGroupOneClick"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/currentPrimos" />
    </RadioGroup>

    <EditText
        android:id="@+id/howManyYouWant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/want"
        android:textAlignment="center"
        android:padding="20dp"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupOne"
        android:autofillHints="" />

    <RadioGroup
        android:id="@+id/radioGroupTwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkedButton="@id/primoRadioButton2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/howManyYouWant">

        <RadioButton
            android:id="@+id/primoRadioButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/primogems"
            android:onClick="onRadioGroupTwoClick"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/howManyYouWant" />

        <RadioButton
            android:id="@+id/fateRadioButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fates"
            android:onClick="onRadioGroupTwoClick"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/howManyYouWant" />
    </RadioGroup>

    <EditText
        android:id="@+id/daysToGetThem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:padding="20dp"
        android:hint="@string/days"
        android:textAlignment="center"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupTwo"
        android:autofillHints="" />

    <TextView
        android:id="@+id/resultText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/results_displayed_here"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calculate" />

    <Button
        android:id="@+id/calculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calulate"
        android:layout_marginTop="30dp"
        android:background="#dcc7ff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/daysToGetThem" />

</androidx.constraintlayout.widget.ConstraintLayout>